# GroupSig

./: CMakeLists.txt  README.md
algorithm/: CMakeLists.txt  RingSig.cpp  RingSig.h
algorithm/bbs04/: GroupSig_BBS.cpp  GroupSig_BBS_Impl.cpp
cmake/: FindGMP.cmake  ProjectBoost.cmake  ProjectPbc.cmake  ProjectPbcSig.cmake
cmake/script/: pbc_sig.patch
devcore/: CMakeLists.txt  CommonFunc.h  ConfigParser.h  StatusCode.h
group_sig/: CMakeLists.txt
group_sig/algorithm/: GroupSig.cpp  GroupSig.h  RingSig.cpp  RingSig.h
script/: install.sh
